fix: replace with another dapp kit

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mysten/wallet-kit": "^0.8.6",
+    "@mysten/dapp-kit": "^0.16.3",
+    "@mysten/sui.js": "^0.51.0",
+    "@tanstack/react-query": "^5.76.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
